--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -4,6 +4,8 @@
 $white : #ffffff;
 $black : #000000;
 $orange : #ff4612;
+$lightgrey : #cccccc;
+$greylight : #bdbdbd;
 $grey : #6a6a6a;
 $darkgrey : #1e1e1e;
-$lightgrey : #cccccc;
+$black-grey : #181515;
