--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -4,6 +4,7 @@
 $white : #ffffff;
 $black : #000000;
 $orange : #ff4612;
+$greywhite: #FAFAFA;
 $lightgrey : #cccccc;
 $greylight : #bdbdbd;
 $grey : #6a6a6a;
