Add video and testimonial section

--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -8,5 +8,6 @@ $greywhite: #FAFAFA;
 $lightgrey : #cccccc;
 $greylight : #bdbdbd;
 $grey : #6a6a6a;
+$greydark: #1E1C1C;
 $darkgrey : #1e1e1e;
 $black-grey : #181515;
