Add Contact us component

--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -3,7 +3,7 @@
 //Background colors: 16
 $white : #ffffff;
 $black : #000000;
-$orange : #ff4612;
+$main : #690500;
 $greywhite: #FAFAFA;
 $lightgrey : #cccccc;
 $greylight : #bdbdbd;
